--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,24 @@
       <artifactId>springdoc-openapi-ui</artifactId>
       <version>1.6.13</version>
     </dependency>
+    
+    <!-- database dependencies -->
+    <dependency>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-jdbc</artifactId>
+    </dependency>
+    
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <scope>test</scope>
+  </dependency>
+
   </dependencies>
   
   <build>
@@ -65,4 +83,5 @@
       </plugin>
     </plugins>
   </build>
+  
 </project>
