--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
       <version>1.6.13</version>
     </dependency>
     
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+  </dependency>
+
     <!-- database dependencies -->
     <dependency>
       <groupId>com.mysql</groupId>
